# cell-nuclei-detection-example

./: CMakeLists.txt
src/: canny.cpp
